--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -496,6 +496,10 @@ h6,
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
 }
+#msg-box1-18 H3 {
+  text-align: center;
+  color: #ffffff;
+}
 #msg-box5-t P {
   font-size: 20px;
 }
