--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -497,7 +497,7 @@ h6,
   font-family: 'Montserrat', sans-serif;
 }
 #msg-box1-18 H3 {
-  text-align: center;
+  text-align: right;
   color: #ffffff;
 }
 #msg-box5-t P {
