create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -497,7 +497,7 @@ h6,
   font-family: 'Montserrat', sans-serif;
 }
 #msg-box2-1a .mbr-section-title {
-  color: #fff;
+  color: #ffffff;
 }
 #msg-box2-1a .mbr-section-subtitle {
   color: #a0a0a0;
